--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,6 @@
 	
 
   <var name="classpath" value="${classpath}:${user.home}/git/2168_Vision_Example/_Libraries/softFP/lib_OpenCV/java/opencv-2410.jar"/>
-
+  <!--<var name="classpath" value="${classpath}:C:/opencv/build/java/opencv-310.jar"/>-->
 
 </project> 
